--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,11 +31,13 @@ endorsed.classpath=
 excludes=
 file.reference.jcommon-1.0.23.jar=src/JFreeChart/jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=src/JFreeChart/jfreechart-1.0.19.jar
+file.reference.sqlite-jdbc-3.23.1.jar=src/SQLite/sqlite-jdbc-3.23.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.sqlite-jdbc-3.23.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=kata5P2.Kata4
+main.class=Controller.Kata5
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
